<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:id="@+id/dialog_layout"
    android:orientation="vertical"
    android:background="#60000000"
    android:gravity="center_horizontal|bottom"
>

    <LinearLayout
        android:id="@+id/lltcontent"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@drawable/border_radius"
        android:gravity="center_horizontal|bottom">

        <Button
            android:id="@+id/btn_take_photo"
            android:layout_width="fill_parent"
            android:layout_height="50dp"
            android:text="@string/takepicture"
            android:background="@color/white"
            android:textColor="@color/blue"
            android:textSize="@dimen/title_font_size" />

        <Button
            android:id="@+id/btn_pick_photo"
            android:layout_width="fill_parent"
            android:layout_height="50dp"
            android:text="@string/choosephone"
            android:background="@drawable/border_buttom_radius"
            android:textColor="@color/blue"
            android:textSize="@dimen/title_font_size" />

        <Button
            android:id="@+id/btn_cancel"
            android:layout_width="fill_parent"
            android:layout_height="50dp"
            android:text="@string/cancel"
            android:background="@drawable/border_buttom_radius"
            android:textColor="@color/blue"
            android:textSize="@dimen/title_font_size" />
    </LinearLayout>



</LinearLayout>
