<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusable="true"
    android:id="@+id/main"
    android:fitsSystemWindows="true"
    >

    <RadioGroup
        android:id="@+id/main_rg_tab"
        android:layout_width="fill_parent"
        android:layout_height="50dip"
        android:layout_alignParentBottom="true"
        android:background="@drawable/border_top"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/main_rb_message"
            android:layout_width="fill_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/message"
            android:textSize="11dp"
            android:drawableTop="@drawable/selector_tab_message"

            android:paddingTop="@dimen/tab_padding_top"
            android:button="@null"
            android:gravity="center"
            android:textColor="@drawable/selector_tab_text"
            android:background="@color/f6"
            android:checked="false" />
        <RadioButton
            android:id="@+id/main_rb_add"
            android:layout_width="fill_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/search"
            android:drawableTop="@drawable/selector_tab_add"
            android:paddingTop="@dimen/tab_padding_top"
            android:button="@null"
            android:gravity="center"
            android:textSize="11dp"
            android:background="@color/f6"
            android:textColor="@drawable/selector_tab_text"
            android:checked="false" />
        <RadioButton

            android:id="@+id/main_rb_activity"
            android:layout_width="fill_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"

            android:text="@string/activity"
            android:textSize="11dp"
            android:drawableTop="@drawable/selector_tab_crm"
            android:paddingTop="@dimen/tab_padding_top"
            android:button="@null"
            android:gravity="center"
            android:textColor="@drawable/selector_tab_text"
            android:background="@color/f6" />


        <RadioButton
            android:id="@+id/main_rb_user"
            android:layout_width="fill_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textSize="11dp"
            android:text="@string/user"
            android:drawableTop="@drawable/selector_tab_my"
            android:paddingTop="@dimen/tab_padding_top"
            android:button="@null"
            android:gravity="center"
            android:background="@color/f6"
            android:textColor="@drawable/selector_tab_text" />


    </RadioGroup>

    <com.android.h5.framework.view.AnimationViewFlipper
    android:id="@+id/main_viewflipper"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/main_rg_tab" />

</RelativeLayout>
